# reviewer-stk-ai-cli

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: 1-pull-request.yml  10-deploy.yml  3-develop.yml  5-realease.yml  5-versioning.yml  7-prod.yml  publish.yml  python-build-test.yml
integration_tests/: README.MD  test_cli.py  test_reviewer_stk_ai.py
integration_tests/files/test_changes/: main.py
integration_tests/files/test_dir/: main.py
report/: review-code-report.md  review-code-report_wtf.md
reports/: diff_report.txt
reviewer_stk_ai/: __main__.py  cli.py  main.py
reviewer_stk_ai/report/: code-report.md
reviewer_stk_ai/src/config/: env_config.py
reviewer_stk_ai/src/exceptions/: __init__.py  authentication_error.py  integration_contract_error.py  integration_error.py  service_permission_error.py
reviewer_stk_ai/src/models/: definitions.py  file_review.py
reviewer_stk_ai/src/service/: reviewer_service.py  reviewer_service_ref.py  stk_callback_service.py  stk_execution_service.py  stk_token_service.py
reviewer_stk_ai/src/utils/: constants.py  file_helper.py  git_helper.py  hash_helper.py  report_helper.py  validate_helper.py
tests/integration_tests/: __init__.py  test_reviewer_stk_ai.py
tests/integration_tests/mock/: stk-ai-endpoints.json  stk-ai-token.json
tests/unit_tests/: conftest.py
tests/unit_tests/app/: test_cli.py
tests/unit_tests/files/: mock.py
tests/unit_tests/files/report/: review-code-report.md
tests/unit_tests/files/tmp/: 01HYRHKFPFAZK1FFF8HVKWYEDN  (+1 more)
unit_tests/app/: test_cli.py  test_main.py
(+24 files in other folders)
